--- a/src/app/components/employe/liste-employe/liste-employe.component.html
+++ b/src/app/components/employe/liste-employe/liste-employe.component.html
@@ -1,9 +1,10 @@
+<app-dashboard></app-dashboard>
 
 <div class="cl">
 
   <div class="pop">
     <input type="checkbox" id="toggle">
-  <label class="add" for="toggle" style="margin-left: 20px; width: 4%; height: 4.5%;">Add</label>
+  <label class="add" for="toggle" style="margin-left: 20px; width:max-content;">Add</label>
   
   <dialog>
     <!--start-->
