--- a/src/app/components/classe/liste-eleve/liste-eleve.component.html
+++ b/src/app/components/classe/liste-eleve/liste-eleve.component.html
@@ -1,3 +1,4 @@
+<app-dashboard></app-dashboard>
 
   <div class="pop">
     <input type="checkbox" id="toggle">
@@ -29,6 +30,10 @@
         <div class="col-md-4">
           <label for="inputPoid" class="form-label">Poid</label>
           <input type="text" class="form-control" id="inputPoid" name="poid" ngModel>
+        </div>
+        <div class="col-md-4">
+          <label for="inputPoid" class="form-label">Date</label>
+          <input type="date" class="form-control" id="inputPoid" name="date" ngModel>
         </div>
         <div class="col-md-4">
           <label for="inputVaccinaction" class="form-label">Vaccinaction</label>
@@ -63,11 +68,7 @@
           <label for="inputAddress" class="form-label">Address</label>
           <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="adresse" ngModel>
         </div>
-        <div class="col-12">
-          <select name="eleves" ngModel>
-            <option *ngFor="let elem of classes" [ngValue]="elem">{{elem.nom}}</option>
-          </select>
-        </div>
+        
         <div class="col-12">
           <button type="submit" class="btn btn-primary">Save</button>
         </div>
