--- a/src/app/components/classe/profil-eleve/profil-eleve.component.scss
+++ b/src/app/components/classe/profil-eleve/profil-eleve.component.scss
@@ -1,240 +1,93 @@
-#toggle{
-    visibility: hidden;
-    opacity: 0;
-    position: relative;
-    z-index: 99;
-  }
-  
-  #toggle:checked ~ dialog {
-    display: block;
-  }
-
-  label{ background: skyblue;
-    border-radius: 4px;}
-  .add{
-    background: blue;
-    color: white;
-    
-
-    border-radius: 4px;
-  }
-  @keyframes appear {
-    0%{
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-  }
-  
-  dialog{
-    animation: appear 50ms ease-in 1;
-    max-width: 500px;
-    z-index: 99;
-  }
-.procon{
-    display: grid;
-    grid-template-columns: 400px 450px;
-    height: 91vh;
-    margin-top: 10px;
-    gap:20px;
-     border-radius: 10px;
-}
-
-img{
-    border-radius: 100%;
-    width: 200px;
- 
-}
-
-
-.profilcard{
-  box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-  background-color: rgba(128, 128, 128, 0.096);
-
-  border-radius: 2%;
-    text-align: center;
-    margin-top: 10px;
-    margin-left: 10%;
-    margin-bottom: 20px;
-  }
-
-  .infocard{
-    box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-    background-color: rgba(128, 128, 128, 0.096);
-    border-radius: 2%;
-   text-align: center;
-   margin-top: 10px;
-   margin-bottom: 20px;
-  }
-.lig1{
-    display: grid;
-    grid-template-columns: 350px  auto;
-gap:2%
-}
 .tot{
-    display: grid;
-    gap: 2.5%;
-    
-}
-
-i{
-    padding: 0px;
-    margin-top: 0;
-  
-}
-.progr{
-    box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
-    border-radius: 10px;
-
-}
-.data{
-    box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
-    border-radius: 10px;
-} 
-.edit{
-    float: right;
-    background-color: blue;
-    border: blue;
-    border-radius: 5px;
-    font-size: 90%;
-    height: 20%;
- 
-    margin-right: 1.3%;
-    color: white;
-}
-
-
-
-@media all and (max-width: 800px) {
-    .lig1{
-        display: flex;
-        flex-direction: column;
-    }
-   
-    .infocard{
-       margin-left: 2.5%;
-      
-        
-    }
-    .profilcard {
-    display: grid;
-    grid-template-columns: auto auto;
-     text-align: center;
-     gap: 0px;
-    }
-    .profilcard .card-title{
-      text-align: center;
-      margin-top: 35%;
-      font-size: 20px;
-    }
-    
-  }
-  .card-text{
-      text-align: center;
-      font-size: 15px;
-      font-weight:bold;
-  }
-  .card-title{
-    text-align: center;
-  
-    font-weight:bold;
-  }
-@media all and (max-width: 462px) {
-  
-
-
-  .profilcard .card-title{
-    text-align: center;
-    margin-top: 6%;
-    font-size: 18px;
-  
-  }
-  .profilcard {
-    display: flex;
-flex-direction: column;
-     text-align: center;
-     gap: 0px;
-    }
-  
-}
-
- 
-
-
-
-
-
-
-
-
-
-  .footer{
-    display: flex;
-    flex-direction: row;
-    gap: 0.1%;
-  align-self: center;
-    align-content: center;
-    
-    
-
-    
-  }
-  .lemp{
-  margin-top: 1%;
-    margin-left: 2%;
-    width: 100%;
-  }
-.card-footer{
- margin-left: auto;
- margin-right: auto;
- color: #270ace;
-}
-
-  .card {
-  
-    box-shadow:  0 5px 30px rgba(138, 135, 135, 0.705);
-    border-radius: 10px;
-    border: 0;
-height: 350px;
-
-
-  }
-  .cl{
-    display:grid;
-
-    gap: 0.2%;
-position: absolute;
-
-overflow: hidden;
-
-  }
- 
-  .card-body{
   display: grid;
-  gap: 0.2%;
- 
-
-  }
- .card-title{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
- display: block;
-   text-align: center;
-   text-decoration: none;
-   color:black;
-   text-transform: uppercase;
- }
- .card-text{
-   text-align: center;
- }
- .col{
-   top:0px
- }
-
-
-.ligne{
-display: grid;
-grid-template-columns: 33%  33%;
-
-gap: 0.5%;
+  grid-template-columns: 620px  auto 500px;
+  gap: 2%;
+  margin-top: 1.5%;
 }
 
+.ligne1{
+ 
+  margin-left: 2%;
+  display: grid;
+  grid-template-columns: 250px auto;
+  gap: 8%;
+  
+}
+.one{
+  box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
+  background-color:#A8C3D0;
+  gap: 8%;
+  font-family:'Mukta', sans-serif;
+  font-size: large; 
+  
+}
+ .collapse1{
+  display: flex;
+  flex-direction: column;
+text-align: center;
+margin-top: 0px;
+}
+
+.two{
+  box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
+  background-color:#A8C3D0;
+}
+.three{
+  box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
+  background-color:#A8C3D0;
+  margin-right: 2%;
+}
+
+.card-text{
+  font-family:'Mukta', sans-serif;
+font-size: large; 
+line-height: 30px;
+margin-top: 10%;
+
+}
+
+
+
+
+#toggle{
+  visibility: hidden;
+  opacity: 0;
+  position: relative;
+  z-index: 99;
+}
+
+#toggle:checked ~ dialog {
+  display: block;
+}
+
+#toggle2{
+  visibility: hidden;
+  opacity: 0;
+  position: relative;
+  z-index: 99;
+}
+
+#toggle3:checked ~ dialog {
+  display: block;
+}
+
+#toggle3{
+  visibility: hidden;
+  opacity: 0;
+  position: relative;
+  z-index: 99;
+}
+
+#toggle2:checked ~ dialog {
+  display: block;
+}
+
+label{ background: skyblue;
+  border-radius: 4px;}
+.add{
+  background: blue;
+  color: white;
+  
+
+  border-radius: 4px;
+}
