--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-  <body>
-    <nav class="dash" *ngIf="show">
+
+    <nav class="dash" >
       <input type="checkbox" id="check">
       <label for="check" class="checkbtn">
         <i class="bi bi-list"></i>
@@ -16,7 +16,7 @@
           <span class="caret"></span></a>
           <ul class="dropdown-menu" >
             <li class="divider"></li>
-            <li><a routerLink="listemp">Employe</a></li>
+            <li><a routerLink="/listemp">Employe</a></li>
             <li><a href="presence">Presence</a></li>
           </ul>
         </li>
@@ -30,4 +30,4 @@
             </ul>
     </nav>
     <section></section>
-  </body>
+
