--- a/src/app/components/employe/presence/presence.component.html
+++ b/src/app/components/employe/presence/presence.component.html
@@ -1,4 +1,6 @@
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<app-dashboard></app-dashboard>
+
+ <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
 	<div class="row">
 		
