--- a/src/app/components/employe/profil-employe/profil-employe.component.scss
+++ b/src/app/components/employe/profil-employe/profil-employe.component.scss
@@ -1,32 +1,55 @@
+
+.tot{
+  display: grid;
+  grid-template-columns: 800px 500px;
+  gap: 5%;
+  margin-top: 1.5%;
+}
+.one{
+  display: grid;
+  gap: 4%;
+  margin-left: 8%;
+  
+}
+.close{
+  margin-left: 90%;
+ 
+  }
+  
 .profilcard{
   box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
-  background-color: rgba(128, 128, 128, 0.096);
+  background-color:#A8C3D0;
 
   border-radius: 2%;
-    text-align: center;
-    margin-top: 10px;
-    margin-left: 10%;
+   
     margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 250px auto;
+    gap: 8%;
   }
+  .card-text{
+    font-family:'Mukta', sans-serif;
+font-size: large; 
+line-height: 30px;
+margin-top: 5%;
+display: grid;
+grid-template-columns: auto auto;
+  }
+.act{
+  background-color: #A8C3D0;
+ 
+  border-radius: 2%;
+  font-family:'Mukta', sans-serif;
+  font-size: large;
+    margin-bottom: 0px;
+}
 
-  .infocard{
-    box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
-    background-color: rgba(128, 128, 128, 0.096);
-    border-radius: 2%;
-   text-align: center;
-   margin-top: 10px;
-   margin-bottom: 20px;
-  }
 .lig1{
     display: grid;
     grid-template-columns: 350px  auto;
 gap:2%
 }
-.tot{
-    display: grid;
-    gap: 2%;
-    
-}
+
 .conge{
     background-color: white;
 width: 4%;
@@ -63,15 +86,16 @@ width: 4%;
   }
   .mod{
     background-color: #24a0ed;
-    margin-top: 2%;
+    padding: .0em 1em;
+    float: right;
   }
   .congecard{
     border: 1px ;
     box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
-    background-color: rgba(128, 128, 128, 0.096);
+    background-color:#A8C3D0;
     border-radius: 2%;
     color: black;
-    margin-left: 5%;
+    
     text-align: center;
     align-items: center;
      padding: 16px;
@@ -88,17 +112,13 @@ width: 4%;
         display: block;
       }
       label{
-        background: skyblue;
-        color: white;
+     
+        color: black;
         padding: .5em 1em;
         border-radius: 4px;
         
       }
-      .card-text{
-        font-family:'Mukta', sans-serif;
-font-size: large; 
-line-height: 30px;
-      }
+     
       .btn-primary{
         background-color: #24a0ed;
       }
