--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,193 +1,246 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;	
-	font-family: Raleway, sans-serif;
-}
-
-body {
-	background: linear-gradient(90deg, #8790be, rgb(236, 230, 164));	
-	height: 100vh;	
-	width: 100vw;
-	overflow: hidden;
-
-}
-
-.container {
-
-	align-items: center;
-	justify-content: center;
-	max-height: max-content;
+#toggle{
+	visibility: hidden;
+	opacity: 0;
+	position: relative;
+	z-index: 99;
+  
+  }
+  
+  #toggle:checked ~ dialog {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-
+  }
+  .popup{
+  margin-bottom: 0px;
+  
+  }
+  
+  .add{ background: skyblue;
+	color: black;
+	padding: .5em 1em;
+	border-radius: 4px;
+	top: 15%;
+  
+  }
+  
+  .close{
+  margin-left: 90%;
+  margin-bottom: 5%;
+  }
+  
+  label{
+	background: white;
+	color: black;
+	padding: .5em 1em;
+	border-radius: 2px;
+  
+  }
+  input{
+	background: skyblue;
+	border-radius: 2px;
+	border-color: black;
+  }
+  @keyframes appear {
+	0%{
+	  opacity: 0;
+	  transform: translateY(-10px);
+	}
+  }
+  
+  dialog{
+	animation: appear 350ms ease-in 1;
+	background: white;
+	max-width: 500px;
+	z-index: 99;
+	margin-left: 25%;
+	margin-right: 25%;
+	margin-top: 3%;
 	
-	
-}
-
-.screen {		
-	background: linear-gradient(90deg, rgb(238,232,170), rgb(238,232,170));		
-	position: relative;	
-	height: 600px;
-	width: 360px;	
-	box-shadow: 0px 0px 24px #4c72aa;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	top: 100px;
-
-}
-
-.screen__content {
-	z-index: 1;
-	position: relative;	
-	height: 100%;
-}
-
-.screen__background {		
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 0;
-	-webkit-clip-path: inset(0 0 0 0);
-	clip-path: inset(0 0 0 0);	
-}
-
-.screen__background__shape {
-	transform: rotate(45deg);
-	position: absolute;
-}
-
-.screen__background__shape1 {
-	height: 520px;
-	width: 520px;
-	background: #FFF;	
-	top: -50px;
-	right: 120px;	
-	border-radius: 0 72px 0 0;
-}
-
-.screen__background__shape2 {
-	height: 220px;
-	width: 220px;
-	background: #4c72aa;	
-	top: -172px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape3 {
-	height: 540px;
-	width: 190px;
-	background: linear-gradient(270deg, #4c72aa, rgb(238,232,170));
-	top: -24px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape4 {
-	height: 400px;
-	width: 200px;
-	background: #4c72aa;	
-	top: 420px;
-	right: 50px;	
-	border-radius: 60px;
-}
-
-.login {
-	width: 320px;
-	padding: 30px;
-	padding-top: 156px;
-}
-
-.login__field {
-	padding: 20px 0px;	
-	position: relative;	
-}
-
-.login__icon {
-	position: absolute;
-	top: 30px;
-	color: #7875B5;
-}
-
-.login__input {
-	border: none;
-	border-bottom: 2px solid #D1D1D4;
-	background: none;
-	padding: 10px;
-	padding-left: 24px;
-	font-weight: 700;
-	width: 75%;
-	transition: .2s;
-}
-
-.login__input:active,
-.login__input:focus,
-.login__input:hover {
-	outline: none;
-	border-bottom-color: #6A679E;
-}
-
-.login__submit {
-	background: #fff;
-	font-size: 14px;
-	margin-top: 30px;
-	padding: 16px 20px;
-	border-radius: 26px;
-	border: 1px solid #D4D3E8;
-	text-transform: uppercase;
-	font-weight: 700;
-	display: flex;
-	align-items: center;
+  }
+  /*
+  
+  .profilcard{
+	box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
+	background-color: rgba(128, 128, 128, 0.096);
+  
+	border-radius: 2%;
+	  //text-align: center;
+	  margin-top: 10px;
+	  margin-left: 10%;
+	  margin-bottom: px;
+	}
+  .paiementcard{
+		box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
+		background-color: rgba(128, 128, 128, 0.096);
+	  
+		border-radius: 2%;
+		  //text-align: center;
+		  margin-top: 10px;
+		  margin-left: 10%;
+		  
+		}
+  .albumcard{
+			box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
+			background-color: rgba(128, 128, 128, 0.096);
+		  
+			border-radius: 2%;
+			  //text-align: center;
+			  margin-top: 10px;
+			  margin-left: 10%;
+			  
+			}
+  .evaluationcard{
+				box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
+				background-color: rgba(128, 128, 128, 0.096);
+			  
+				border-radius: 2%;
+				  //text-align: center;
+				  margin-top: 10px;
+				  margin-left: 10%;
+  }
+  .evaluationcard .card {
+	//text-align: center;
+	margin-top: 10px;
+	margin-left: 10%;
+	margin-right: 10%;
+	font-size: 20px;
+  }
+  
+  .row{
 	width: 100%;
-	color: #6f6f70;
-	box-shadow: 0px 2px 2px #5C5696;
-	cursor: pointer;
-	transition: .2s;
-}
-
-.login__submit:active,
-.login__submit:focus,
-.login__submit:hover {
-	border-color: #6A679E;
-	outline: none;
-}
-
-.button__icon {
-	font-size: 24px;
-	margin-left: auto;
-	color: #7875B5;
-}
-
-.social-login {	
-	position: absolute;
-	height: 140px;
-	width: 160px;
+  }  
+  */
+  *{
+	padding: 0;
+	margin: 0;
+	font-family: sans-serif;
+  }
+  body{
+	height: 100vh;
+	background: #002f5f;
+  }
+  .container{
 	text-align: center;
-	bottom: 0px;
-	right: 0px;
-	color: #fff;
-}
-
-.social-icons {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.social-login__icon {
-	padding: 20px 10px;
-	color: #fff;
-	text-decoration: none;	
-	text-shadow: 0px 0px 8px #7875B5;
-}
-
-.social-login__icon:hover {
-	transform: scale(1.5);	
-}
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 100%;
+  }
+  
+  .container span{
+	text-transform: uppercase;
+	display: block;
+  }
+  .mytext1{
+	color: white;
+	font-size: 60px;
+	font-weight: 700;
+	letter-spacing: 8px;
+	margin-bottom: 20px;
+	background: #002f5f;
+	position: relative;
+	animation: text 2s 1;
+  
+  }
+  .mytext2{
+	font-size: 30px;
+	  color: #E91E63;
+	  font-weight: bold;
+	  font-family: cursive;
+  }
+  @keyframes text {
+	0%{
+	  color: black;
+	  margin-bottom: -40px;
+  
+	}
+	30%{
+	  letter-spacing: 25px;
+	  margin-bottom: -40px;
+  
+	}
+	85%{
+	  letter-spacing: 8px;
+	  margin-bottom: -40px;
+  
+	}
+  }
+  
+  
+  
+  
+  /* The Modal (background) */
+  .modal {
+  backdrop-filter: blur(20px);
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 40vh; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.178); /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+  }
+  
+  @keyframes fadeInModal {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  /* Modal Content */
+  .modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: fit-content;
+  animation: fadeIn 0.3s;
+  }
+  
+  @keyframes fadeIn {
+  0% {opacity:0;
+	transform: scale(0, 0);}
+  100% {opacity:1;
+	transform: scale(1, 1);}
+  
+  }
+  .modal-content h2 {
+  margin-right: 50px;
+  color: #5375bdd5;
+  }
+  .p-justify-right {
+  display: flex;
+  justify-content:flex-end;
+  }
+  
+  .p-justify-between {
+  display: flex;
+  justify-content:space-between;
+  }
+  div{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  p-menubar .p-button-rounded{
+  padding: 8px;
+  width: 38px;
+  height: 38px;
+  margin: 2px;
+  transition: 0.3s;
+  }
+  
+  
+  p-menubar .p-button-rounded:hover{
+  padding: 8px 16px;
+  width: fit-content;
+  transition: 0.3s;
+  }
+  .add:hover {
+	transform: scale(1.3);
+	text-decoration: none;
+	color: #ffffff;
+  }
